<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_M1K1_BENDER_Constants" Id="{94dd21f6-e0ff-4b4a-8ad5-ed8b18e837c0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
    // Encoder reference values in counts = nm
    nM1K1bendUS_ENC_REF : ULINT := 21458400;
    nM1K1bendDS_ENC_REF : ULINT := 21225900;

    // PMPS Limits for benders
    nM1K1bendUS_PMPS_UpperLimit : ULINT := 22100000; //21500000;//22100000; As requested by Alex R and RP, switched back again
    nM1K1bendUS_PMPS_LowerLimit : ULINT := 20900000; //20100000;//20900000;

    nM1K1bendDS_PMPS_UpperLimit : ULINT := 21800000;//21100000;//21800000;
    nM1K1bendDS_PMPS_LowerLimit : ULINT := 20600000;// 19800000;//20600000;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>